feat: createBungae(), 환경설정 변경
createBungae() 더미데이터 넣어서 테스트 완료, application.properties에 spring-devtools 추가
build.gradle에 아래 두가지 추가
[runtimeOnly 'com.mysql:mysql-connector-j']
[implementation 'org.springframework.boot:spring-boot-devtools']

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=bungae
 #configuring port
 server.port=8081
 
+#spring-devtools
+spring.devtools.restart.enabled=true
+
 #Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
