fix: createBungae(), application.properties에 db정보 빼기
createBungae() 수정, application.properties에 db정보 다른 properties로 빼고 gitignore에 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,8 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-#Spring DataSource (MySQL)
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bungaeTest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=wls1452
+#Spring DataSource
+spring.profiles.include=db
 
 #Spring JPA
 spring.jpa.database=mysql
