--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ HELP.md
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
-!**/src/test/**/build/
+!**/src/test/**/build
+application-db.properties
 
 ### STS ###
 .apt_generated
