--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build
-application-db.properties
+application-mysql.properties
 
 ### STS ###
 .apt_generated
