chore: application.properties db 정보 변경
다른 properties 파일로 빼서 업로드 안되게

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 #Spring DataSource
-spring.profiles.include=db
+spring.profiles.include=mysql
 
 #Spring JPA
 spring.jpa.database=mysql
