--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=bungae
+
+spring.datasource.url=jdbc:mysql://localhost:3306/Bungae
+spring.datasource.username=retniw
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
