--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=bungae
+server.port=8080
+naver.map.client.id=k495h0yzln
+naver.map.client.secret=qg4NUZDPlCS6il7dN76afkJkmFwdORhkHWsyZ1OH
