--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.user.name=admin
 spring.security.user.password=password
+
+# ?? ???
+spring.servlet.multipart.enabled=true
+# ???? ??? ?? ????
+spring.servlet.multipart.location=#
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+#  ???? ?? ??
+com.example.upload.path =#
