--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,11 @@ spring.application.name=bungae
 naver.map.client.id=k495h0yzln
 naver.map.client.secret=qg4NUZDPlCS6il7dN76afkJkmFwdORhkHWsyZ1OH
 
+kakao.api.key=0759d7875d20cfa154cf15e0997f6f40
+
+
 #configuring port
-server.port=8080
+server.port=8081
 
 #spring-devtools
 spring.devtools.restart.enabled=true
