Fix: 번개 장소 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ kakao.api.key=0759d7875d20cfa154cf15e0997f6f40
 
 
 #configuring port
-server.port=8081
+server.port=8080
 
 #spring-devtools
 spring.devtools.restart.enabled=true
@@ -25,7 +25,7 @@ spring.profiles.include=mysql
 #Spring JPA
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
