Feat: 채팅 기능 구현  - bungae 메소드랑 연결  - 수신하면 프사, 닉네임, 텍스트, 발신하면 텍스트만 보이게  - 번개모임 id로 채팅방 구독 및 브로드캐스트  - 개설했을 시 채팅방에 알림

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.3")
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
