--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.profiles.include=mysql
 #Spring JPA
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -41,3 +41,7 @@ spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 #  ???? ?? ??
 com.example.upload.path =#
+
+#logging.level.org.springframework=DEBUG
+
+
