Feat: 채팅 기능 구현  - bungae 메소드랑 연결  - 수신하면 프사, 닉네임, 텍스트, 발신하면 텍스트만 보이게  - 번개모임 id로 채팅방 구독 및 브로드캐스트  - 개설했을 시 채팅방에 알림.. 본인에게만 ㅠ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.profiles.include=mysql
 #Spring JPA
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
