--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,6 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
 
-
-
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -54,7 +52,7 @@ tasks.named('test') {
     useJUnitPlatform()
 
 }
-    tasks.named('test') {
-        useJUnitPlatform()
-    }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
+}
