Fix: 번개 생성, 수정 시 사진 업로드
application.properties 맨 밑에 file.upload-dir= 에 uploads 폴더 경로

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,4 @@ com.example.upload.path =#
 
 server.servlet.session.timeout=4m
 
+file.upload-dir=C:/Users/Jin/Desktop/study/multicampus/bungae/uploads/
