--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,4 +43,4 @@ com.example.upload.path =#
 
 server.servlet.session.timeout=4m
 
-file.upload-dir=C:/Users/Jin/Desktop/study/multicampus/bungae/uploads/
+file.upload-dir=/Users/jeonghyeyeon/Desktop/multicam/spring-workspace/bungae/uploads/
