--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.css linguist-detectable=false
-*.SCSS linguist-detectable=false
+*.scss linguist-detectable=false
 *.html linguist-detectable=false
